# yas

./: .appveyor.yml  .travis.yml  README  README.md  README.textile
.github/workflows/: ci.yml
examples/asis/: main.cpp
examples/base_object/: main.cpp
examples/init/: main.cpp
examples/nested/: main.cpp
examples/one_func/: main.cpp
examples/one_func_cond/: main.cpp
examples/one_func_cond2/: main.cpp
examples/one_memfn/: main.cpp
examples/raw_array/: main.cpp
examples/serialization/: main.cpp  serialization.pro
examples/serialization-method-1-test/: main.cpp
examples/serialization-method-2-test/: main.cpp
examples/serialization-method-3-test/: main.cpp
examples/serialization-method-4-test/: main.cpp
examples/serialization-method-5-test/: main.cpp
examples/serialization-method-6-test/: main.cpp  serialization-method-6-test.pro
examples/serialization-method-7-test/: main.cpp  serialization-method-7-test.pro
examples/serialization-method-8-test/: main.cpp
examples/split_func/: main.cpp
examples/split_memfn/: main.cpp
examples/streams/: main.cpp
examples/traits/: main.cpp
examples/traits-ex/: main.cpp
examples/xor-stream/: main.cpp
include/yas/: abseil_types.hpp  base_object.hpp  binary_iarchive.hpp  binary_oarchive.hpp  boost_types.hpp  buffers.hpp  count_streams.hpp  defaul_traits.hpp  file_streams.hpp  get_archive.hpp  hexdump.hpp  json_iarchive.hpp  json_oarchive.hpp  mem_streams.hpp  null_streams.hpp  object.hpp  qt_types.hpp  serialize.hpp  std_streams.hpp  std_traits.hpp  std_types.hpp  text_iarchive.hpp  text_oarchive.hpp  tools.hpp  version.hpp  yas_fwd.hpp
include/yas/config/: config.hpp
include/yas/config/compiler/: gcc.hpp  intel.hpp  msvc.hpp
include/yas/detail/: base_object.hpp  has_function_serialize.hpp  has_method_serialize.hpp  information.hpp  memstream.hpp  selector.hpp  version.hpp
include/yas/detail/boost_preprocessor/: auto_rec.hpp  bool.hpp  cat.hpp  comma_if.hpp  dec.hpp  eat.hpp  elem.hpp  enum_params.hpp  error.hpp  if.hpp  iif.hpp  inc.hpp  overload.hpp  preprocessor.hpp  rem.hpp  repeat.hpp  size.hpp  telem.hpp  velem.hpp  vsize.hpp
include/yas/detail/config/: config.hpp  endian.hpp
include/yas/detail/io/: binary_file_stream.hpp  binary_mem_stream.hpp  binary_streams.hpp  convertors.hpp  endian_conv.hpp  exception_base.hpp  exceptions.hpp  exceptions_base.hpp  header.hpp  information.hpp  io_exceptions.hpp  json_file_stream.hpp  json_mem_stream.hpp  json_streams.hpp  memstream.hpp  serialization_exception.hpp  serialization_exceptions.hpp  stream.hpp  streams.hpp  text_file_stream.hpp  text_mem_stream.hpp  text_streams.hpp
include/yas/detail/mpl/: metafunctions.hpp  type_traits.hpp
include/yas/detail/preprocessor/: auto_rec.hpp  bitand.hpp  bool.hpp  cat.hpp  comma_if.hpp  compl.hpp  config.hpp  dec.hpp  eat.hpp  elem.hpp  empty.hpp  enum_params.hpp  equal.hpp  error.hpp  expr_if.hpp  expr_iif.hpp  if.hpp  iif.hpp  inc.hpp  not_equal.hpp  overload.hpp  preprocessor.hpp  rep_for.hpp  rep_for_impl.hpp  rep_for_impl_dmc.hpp  rep_for_impl_edg.hpp  rep_for_impl_msvc.hpp  repeat.hpp  seq_for_each.hpp  seq_for_each_i.hpp  seq_seq.hpp  size.hpp  stringize.hpp  telem.hpp  tuple_elem.hpp  tuple_rem.hpp  tuple_size.hpp  tuple_to_seq.hpp  variadic_elem.hpp  vsize.hpp
include/yas/detail/tools/: base64.hpp  base_object.hpp  buffer.hpp  buffers.hpp  cast.hpp  ctmap.hpp  ctsort.hpp  enum_cast.hpp  exceptions.hpp  fnv1a.hpp  hexdumper.hpp  json_tools.hpp  limit.hpp  limit_exceptions.hpp  noncopyable.hpp  rapidjson_dtoa.hpp  save_load_string.hpp  static_assert.hpp  tuple_element_name.hpp  tuple_element_switch.hpp  (+2 more)
include/yas/mpl/: bool.hpp  metafunctions.hpp  type_traits.hpp
include/yas/serializers/: boost_types_serializers.hpp  qt_types_serializers.hpp  serializer.hpp  std_types_serializers.hpp
include/yas/tools/: archinfo.hpp  archive_selector.hpp  array.hpp  asis.hpp  base_object.hpp  buffer.hpp  hexdump.hpp  hexdumper.hpp  init.hpp  pair_object.hpp  static_assert.hpp  utf8conv.hpp  version.hpp  wrap_asis.hpp  wrap_init.hpp
tests/base/: CMakeLists.txt  array.hpp  auto_array.hpp  binary_test.hpp  bitset.hpp  buffer.hpp  enum.hpp  forward_list.hpp  main.cpp  one_method.hpp  pod.hpp  speed_one_function.hpp  speed_one_method.hpp  speed_split_functions.hpp  speed_split_methods.hpp  split_functions.hpp  split_methods.hpp  test.hpp  text_test.hpp  types.hpp  types_test.hpp  unordered_multimap.hpp  unordered_multiset.hpp  unordered_set.hpp  yas-base-test.pro  yas-base-test.sln  yas-base-test.vcproj
tests/base/include/: absl_cont_btree_map.hpp  absl_cont_flat_hash_map.hpp  archive_type.hpp  array.hpp  auto_array.hpp  base64.hpp  base_object.hpp  bitset.hpp  boost_cont_deque.hpp  boost_cont_flat_map.hpp  boost_cont_flat_multimap.hpp  boost_cont_flat_multiset.hpp  boost_cont_flat_set.hpp  boost_cont_list.hpp  boost_cont_map.hpp  boost_cont_multimap.hpp  boost_cont_multiset.hpp  boost_cont_set.hpp  boost_cont_slist.hpp  boost_cont_stable_vector.hpp  boost_cont_static_vector.hpp  boost_cont_string.hpp  boost_cont_vector.hpp  boost_cont_wstring.hpp  boost_fusion_list.hpp  boost_fusion_map.hpp  boost_fusion_pair.hpp  boost_fusion_set.hpp  boost_fusion_tuple.hpp  boost_fusion_vector.hpp  boost_string_view.hpp  boost_tuple.hpp  boost_variant.hpp  buffer.hpp  chrono.hpp  compacted_storage_size.hpp  complex.hpp  deque.hpp  endian.hpp  enum.hpp  (+59 more)
tests/base/qtcreator/: yas-base-test.pro
tests/base/vc2008/: yas-base-test.sln  yas-base-test.vcproj
tests/base/vc2010/: yas-base-test.sln  yas-base-test.vcxproj
tests/base/vc2011/: yas-base-test.sln  yas-base-test.vcxproj
tests/endian/: main.cpp
tests/portability/: main.cpp
tests/speed/: main.cpp
tests/speed/include/: speed_one_function.hpp  speed_one_method.hpp  speed_split_functions.hpp  speed_split_methods.hpp
tests/speed/qtcreator/: yas-speed-test.pro
tests/speed/vc2008/: yas-speed-test.sln  yas-speed-test.vcproj
tests/speed/vc2010/: yas-speed-test.sln  yas-speed-test.vcxproj
tests/speed/vc2011/: yas-speed-test.sln  yas-speed-test.vcxproj
(+444 files in other folders)
